--- a/src/components/Link/Link.module.css
+++ b/src/components/Link/Link.module.css
@@ -24,12 +24,16 @@
   align-self: stretch;
   justify-content: center;
   align-items: center;
+  background: lightgray;
+  color: white;
   font-size: 2rem;
   font-weight: 500;
 }
 
 .title {
   margin-top: 0.4rem;
+  font-size: 0.8rem;
+  font-weight: 500;
   text-align: center;
   text-overflow: ellipsis;
   overflow: hidden;
