--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@ input[type='number']::-webkit-inner-spin-button,
 input[type='number']::-webkit-outer-spin-button {
   @apply appearance-none;
 }
+
+select option {
+  @apply bg-neutral-900;
+}
