--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 @import 'tailwindcss';
 @plugin '@tailwindcss/forms';
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 body {
-  @apply bg-neutral-950 bg-cover bg-center font-sans text-[100%];
+  @apply bg-cover bg-center font-sans text-[100%];
+  @apply bg-neutral-50;
+  @apply dark:bg-neutral-950;
 }
 
 input::-webkit-color-swatch {
@@ -23,5 +27,6 @@ input[type='number'] {
 }
 
 select option {
-  @apply bg-neutral-900;
+  @apply bg-white text-black;
+  @apply dark:bg-neutral-900 dark:text-white;
 }
